packages/otupy/otupy-1.1.12.tar.gz/otupy-1.1.12/validation/openc2-cbor-samples/tests/commands/bad/deny_uri_actuator_multiple.cbor
£factionddenyftarget¡curishttps://example.comhactuator¢dslpf¡hasset_idf123456fx-acme¡kendpoint_idf567890